# MiniTelemetry

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md
src/apps/: CMakeLists.txt  logger.cpp  monitor.cpp  sensor_hub.cpp  telemetry_log.csv
src/core/: CMakeLists.txt  telemetry.idl  telemetry_core.cpp  telemetry_core.h  telemetry_types.h  thread_safe_queue.cpp  thread_safe_queue.h
tests/: CMakeLists.txt  test_end_to_end.cpp  test_queue.cpp  test_serialization.cpp
